fix ResourceTable Cell vertical-align

--- a/src/components/ResourceTable/ResourceTable.scss
+++ b/src/components/ResourceTable/ResourceTable.scss
@@ -92,7 +92,7 @@ $breakpoint: 768px;
   white-space: nowrap;
   text-align: left;
   transition: background-color 0.2s ease-in-out;
-  vertical-align: top;
+  vertical-align: middle;
 }
 
 .Cell-numeric {
